# PodcastLab

./: .dockerignore  .gitignore  Dockerfile  README.md  TEST_README.md  config_example.py  debug_streamlit_script.py  demo_test.py  examples.py  main.py  pyproject.toml  requirements.txt  run_tests.py  streamlit_app.py  test_podcast_script.py
.streamlit/: config.toml
