[project]
name = "podcast-agent"
version = "0.1.0"
description = "AI-powered podcast creator agent using Google's Imagen, Gemini, and Veo models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=0.8.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "streamlit>=1.49.1",
    "moviepy>=2.2.1",
    "requests>=2.32.5",
]
